c2rust-transpile/tests/snapshots/snapshots__transpile@sigign.c.2024.macos.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/sigign.2024.macos.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn foo() {
    let mut handler: Option<unsafe extern "C" fn(::core::ffi::c_int) -> ()> =
        ::core::mem::transmute::<
            ::libc::intptr_t,
            Option<unsafe extern "C" fn(::core::ffi::c_int) -> ()>,
        >(1 as ::core::ffi::c_int as ::libc::intptr_t);
}
