c2rust-transpile/tests/snapshots/snapshots__transpile@spin.c.2021.aarch64.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arch-specific/spin.2021.aarch64.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![deny(unsafe_op_in_unsafe_fn)]
#![feature(stdsimd)]
#[cfg(target_arch = "aarch64")]
pub use ::core::arch::aarch64::__yield;
#[cfg(target_arch = "arm")]
pub use ::core::arch::arm::__yield;
#[no_mangle]
pub unsafe extern "C" fn spin() {
    unsafe {
        __yield();
    }
}
