c2rust-transpile/tests/snapshots/snapshots__transpile@spin.c.2024.aarch64.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arch-specific/spin.2024.aarch64.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#![feature(stdarch_arm_hints)]
#[cfg(target_arch = "aarch64")]
pub use ::core::arch::aarch64::__yield;
#[cfg(target_arch = "arm")]
pub use ::core::arch::arm::__yield;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn spin() {
    __yield();
}
